--- a/sections/image-carousel.liquid
+++ b/sections/image-carousel.liquid
@@ -1,7 +1,7 @@
-<div class="py-12 bg-gray-50">
-  <div class="max-w-xl px-4 mx-auto sm:px-6 lg:max-w-screen-xl lg:px-8">
+<div class="xpy-12 xbg-gray-50">
+  <div class="xmax-w-xl xpx-4 xmx-auto sm:px-6 lg:max-w-screen-xl lg:px-8">
     <div>
-      <h3 class="text-3xl font-extrabold leading-8 tracking-tight text-center text-gray-900 sm:text-4xl sm:leading-10">
+      <h3 class="xtext-3xl xfont-extrabold xleading-8 xtracking-tight xtext-center xtext-gray-900 sm:xtext-4xl sm:leading-10">
         Packed with features
       </h3>
       <p class="max-w-3xl mx-auto mt-4 text-xl leading-7 text-center text-gray-500">
